<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base_color"
    tools:context=".ColordleGame"
    tools:ignore="LabelFor">

    <TextView
        android:id="@+id/Colordle1Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/colordle_1"
        android:textSize="20pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.92"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="286dp"
        android:background="@drawable/main_menu_buttons"
        android:onClick="onBtnClickMainPage"
        android:text="@string/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="4dp"
        android:background="@drawable/text_square"
        android:ems="10"
        android:focusable="true"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="textVisiblePassword|textCapCharacters"
        android:maxLength="1"
        android:text=""
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.019"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/text_square"
        android:ems="10"
        android:enabled="false"
        android:focusable="true"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="textVisiblePassword|textCapCharacters"
        android:maxLength="1"
        android:text=""
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editText1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/text_square"
        android:ems="10"
        android:enabled="false"
        android:focusable="true"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="textVisiblePassword|textCapCharacters"
        android:maxLength="1"
        android:text=""
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editText2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/text_square"
        android:ems="10"
        android:enabled="false"
        android:focusable="true"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="textVisiblePassword|textCapCharacters"
        android:maxLength="1"
        android:text=""
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editText3"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/text_square"
        android:ems="10"
        android:enabled="false"
        android:focusable="true"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="textVisiblePassword|textCapCharacters"
        android:maxLength="1"
        android:text=""
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editText4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/text_square"
        android:ems="10"
        android:enabled="false"
        android:focusable="true"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="textVisiblePassword|textCapCharacters"
        android:maxLength="1"
        android:text=""
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editText5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53"
        tools:ignore="SpeakableTextPresentCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/colorGuess1"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/color_square"
        android:onClick="onBtnClickGuess"
        android:text="@string/guess"
        android:textSize="11sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editText6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.53" />

    <ImageView
        android:id="@+id/colorAnswer"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:background="@drawable/color_square"
        app:layout_constraintBottom_toTopOf="@+id/editText4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Colordle1Title"
        app:layout_constraintVertical_bias="0.076"
        tools:ignore="contentDescription,ImageContrastCheck" />

    <EditText
        android:id="@+id/hint1"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="11dp"
        android:background="@drawable/text_square2"
        android:ems="10"
        android:focusable="false"
        android:enabled="false"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="textVisiblePassword|textCapCharacters"
        android:maxLength="1"
        android:text=""
        android:textAllCaps="true"
        tools:ignore="SpeakableTextPresentCheck"
        app:layout_constraintBottom_toTopOf="@+id/editText1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorAnswer"/>


    <EditText
        android:id="@+id/hint2"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/text_square2"
        android:ems="10"
        android:focusable="false"
        android:enabled="false"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="textVisiblePassword|textCapCharacters"
        android:maxLength="1"
        android:text=""
        android:textAllCaps="true"
        tools:ignore="SpeakableTextPresentCheck"
        app:layout_constraintBottom_toTopOf="@+id/editText2"
        app:layout_constraintStart_toEndOf="@+id/hint1"
        app:layout_constraintTop_toBottomOf="@+id/colorAnswer" />

    <EditText
        android:id="@+id/hint3"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/text_square2"
        android:ems="10"
        android:focusable="false"
        android:enabled="false"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="textVisiblePassword|textCapCharacters"
        android:maxLength="1"
        android:text=""
        android:textAllCaps="true"
        tools:ignore="SpeakableTextPresentCheck"
        app:layout_constraintBottom_toTopOf="@+id/editText3"
        app:layout_constraintStart_toEndOf="@+id/hint2"
        app:layout_constraintTop_toBottomOf="@+id/colorAnswer" />

    <EditText
        android:id="@+id/hint4"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/text_square2"
        android:ems="10"
        android:focusable="false"
        android:enabled="false"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="textVisiblePassword|textCapCharacters"
        android:maxLength="1"
        android:text=""
        android:textAllCaps="true"
        tools:ignore="SpeakableTextPresentCheck"
        app:layout_constraintBottom_toTopOf="@+id/editText4"
        app:layout_constraintStart_toEndOf="@+id/hint3"
        app:layout_constraintTop_toBottomOf="@+id/colorAnswer" />

    <EditText
        android:id="@+id/hint5"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/text_square2"
        android:ems="10"
        android:focusable="false"
        android:enabled="false"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="textVisiblePassword|textCapCharacters"
        android:maxLength="1"
        android:text=""
        android:textAllCaps="true"
        tools:ignore="SpeakableTextPresentCheck"
        app:layout_constraintBottom_toTopOf="@+id/editText5"
        app:layout_constraintStart_toEndOf="@+id/hint4"
        app:layout_constraintTop_toBottomOf="@+id/colorAnswer" />

    <EditText
        android:id="@+id/hint6"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:background="@drawable/text_square2"
        android:ems="10"
        android:focusable="false"
        android:enabled="false"
        android:gravity="center"
        android:importantForAutofill="no"
        android:inputType="textVisiblePassword|textCapCharacters"
        android:maxLength="1"
        android:text=""
        android:textAllCaps="true"
        tools:ignore="SpeakableTextPresentCheck"
        app:layout_constraintBottom_toTopOf="@+id/editText6"
        app:layout_constraintStart_toEndOf="@+id/hint5"
        app:layout_constraintTop_toBottomOf="@+id/colorAnswer" />

    <EditText
        android:id="@+id/triesText"
        android:layout_width="60dp"
        android:layout_height="48dp"
        android:background="@null"
        android:ems="10"
        android:gravity="center"
        android:inputType="none"
        android:text="Guess"
        android:textSize="14dp"
        android:focusable="false"
        app:layout_constraintBottom_toTopOf="@+id/colorGuess1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toEndOf="@+id/hint6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.918"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/triesNum"
        android:layout_width="60dp"
        android:layout_height="48dp"
        android:background="@null"
        android:ems="10"
        android:gravity="center"
        android:inputType="none"
        android:text="6"
        android:textSize="16dp"
        android:focusable="false"
        app:layout_constraintBottom_toTopOf="@+id/colorGuess1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toEndOf="@+id/hint6"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="SpeakableTextPresentCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>